After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697305 - opencv: handdetect: compile error on OS/X
opencv: handdetect: compile error on OS/X
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Mac OS
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-05 03:17 UTC by Todd Agulnick
Modified: 2013-04-05 08:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (2.44 KB, patch)
2013-04-05 03:18 UTC, Todd Agulnick
committed Details | Review

Description Todd Agulnick 2013-04-05 03:17:40 UTC
Trying to build opencv fails with errors like the following:

gsthanddetect.h:84: error: expected specifier-qualifier-list before 'uint'

Replacing uint with guint seems to fix the problem. Proposed patch attached.
Comment 1 Todd Agulnick 2013-04-05 03:18:15 UTC
Created attachment 240687 [details] [review]
proposed patch
Comment 2 Tim-Philipp Müller 2013-04-05 08:50:08 UTC
Thanks, pushed:

 commit 71743d13c430bdef698d0fd35789740168440df0
 Author: Todd Agulnick <todd@agulnick.com>
 Date:   Fri Apr 5 09:41:26 2013 +0100

    handdetect: fix build on OS/X
    
    gsthanddetect.h:84: error: expected specifier-qualifier-list before 'uint'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=697305

Would be great if you could provide patches in git format-patch format in future, thanks!